6.2/_sources/module/index.rst.txt
模块手册
########

**GMT 主程序与脚本**

.. hlist::
    :columns: 6

    - :doc:`gmt`
    - :doc:`gmt-config`

**GMT 模块（已翻译整理）**

.. hlist::
    :columns: 6

    - :doc:`basemap`
    - :doc:`begin`
    - :doc:`clear`
    - :doc:`clip`
    - :doc:`coast`
    - :doc:`colorbar`
    - :doc:`contour`
    - :doc:`coupe`
    - :doc:`docs`
    - :doc:`end`
    - :doc:`figure`
    - :doc:`filter1d`
    - :doc:`fitcircle`
    - :doc:`gmtconnect`
    - :doc:`gmtdefaults`
    - :doc:`gmtget`
    - :doc:`gmtinfo`
    - :doc:`gmtlogo`
    - :doc:`gmtselect`
    - :doc:`gmtset`
    - :doc:`gmtsimplify`
    - :doc:`gmtwhich`
    - :doc:`grd2cpt`
    - :doc:`grd2xyz`
    - :doc:`grdblend`
    - :doc:`grdclip`
    - :doc:`grdcontour`
    - :doc:`grdconvert`
    - :doc:`grdcut`
    - :doc:`grdedit`
    - :doc:`grdfill`
    - :doc:`grdimage`
    - :doc:`grdinfo`
    - :doc:`grdlandmask`
    - :doc:`grdmask`
    - :doc:`grdpaste`
    - :doc:`grdproject`
    - :doc:`grdsample`
    - :doc:`grdtrack`
    - :doc:`grdtrend`
    - :doc:`grdvector`
    - :doc:`grdview`
    - :doc:`grdvolume`
    - :doc:`histogram`
    - :doc:`image`
    - :doc:`img2google`
    - :doc:`img2grd`
    - :doc:`inset`
    - :doc:`kml2gmt`
    - :doc:`legend`
    - :doc:`makecpt`
    - :doc:`mapproject`
    - :doc:`meca`
    - :doc:`plot`
    - :doc:`polar`
    - :doc:`project`
    - :doc:`psconvert`
    - :doc:`rose`
    - :doc:`sac`
    - :doc:`sample1d`
    - :doc:`solar`
    - :doc:`spectrum1d`
    - :doc:`sph2grd`
    - :doc:`subplot`
    - :doc:`surface`
    - :doc:`ternary`
    - :doc:`text`
    - :doc:`velo`
    - :doc:`xyz2grd`

**GMT 模块（尚未翻译整理，欢迎贡献）**

.. hlist::
    :columns: 6

    - :doc:`gmt:batch`
    - :doc:`gmt:blockmean`
    - :doc:`gmt:blockmedian`
    - :doc:`gmt:blockmode`
    - :doc:`gmt:dimfilter`
    - :doc:`gmt:events`
    - :doc:`gmt:gmt2kml`
    - :doc:`gmt:gmtbinstats`
    - :doc:`gmt:gmtconvert`
    - :doc:`gmt:gmtmath`
    - :doc:`gmt:gmtregress`
    - :doc:`gmt:gmtspatial`
    - :doc:`gmt:gmtsplit`
    - :doc:`gmt:gmtswitch`
    - :doc:`gmt:gmtvector`
    - :doc:`gmt:grd2kml`
    - :doc:`gmt:grdfft`
    - :doc:`gmt:grdgdal`
    - :doc:`gmt:grdfilter`
    - :doc:`gmt:grdgradient`
    - :doc:`gmt:grdhisteq`
    - :doc:`gmt:grdinterpolate`
    - :doc:`gmt:grdmath`
    - :doc:`gmt:grdmix`
    - :doc:`gmt:greenspline`
    - :doc:`gmt:mask`
    - :doc:`gmt:movie`
    - :doc:`gmt:nearneighbor`
    - :doc:`gmt:plot3d`
    - :doc:`gmt:sphdistance`
    - :doc:`gmt:sphinterpolate`
    - :doc:`gmt:sphtriangulate`
    - :doc:`gmt:supplements/geodesy/earthtide`
    - :doc:`gmt:supplements/geodesy/gpsgridder`
    - :doc:`gmt:supplements/gshhg/gshhg`
    - :doc:`gmt:supplements/mgd77/mgd77convert`
    - :doc:`gmt:supplements/mgd77/mgd77header`
    - :doc:`gmt:supplements/mgd77/mgd77info`
    - :doc:`gmt:supplements/mgd77/mgd77list`
    - :doc:`gmt:supplements/mgd77/mgd77magref`
    - :doc:`gmt:supplements/mgd77/mgd77manage`
    - :doc:`gmt:supplements/mgd77/mgd77path`
    - :doc:`gmt:supplements/mgd77/mgd77sniffer`
    - :doc:`gmt:supplements/mgd77/mgd77track`
    - :doc:`gmt:supplements/potential/gmtflexure`
    - :doc:`gmt:supplements/potential/gmtgravmag3d`
    - :doc:`gmt:supplements/potential/gravfft`
    - :doc:`gmt:supplements/potential/grdflexure`
    - :doc:`gmt:supplements/potential/grdgravmag3d`
    - :doc:`gmt:supplements/potential/grdredpol`
    - :doc:`gmt:supplements/potential/grdseamount`
    - :doc:`gmt:supplements/potential/talwani2d`
    - :doc:`gmt:supplements/potential/talwani3d`
    - :doc:`gmt:supplements/segy/segy2grd`
    - :doc:`gmt:supplements/segy/segy`
    - :doc:`gmt:supplements/segy/segyz`
    - :doc:`gmt:supplements/spotter/backtracker`
    - :doc:`gmt:supplements/spotter/gmtpmodeler`
    - :doc:`gmt:supplements/spotter/grdpmodeler`
    - :doc:`gmt:supplements/spotter/grdrotater`
    - :doc:`gmt:supplements/spotter/grdspotter`
    - :doc:`gmt:supplements/spotter/hotspotter`
    - :doc:`gmt:supplements/spotter/originater`
    - :doc:`gmt:supplements/spotter/polespotter`
    - :doc:`gmt:supplements/spotter/rotconverter`
    - :doc:`gmt:supplements/spotter/rotsmoother`
    - :doc:`gmt:supplements/x2sys/x2sys_binlist`
    - :doc:`gmt:supplements/x2sys/x2sys_cross`
    - :doc:`gmt:supplements/x2sys/x2sys_datalist`
    - :doc:`gmt:supplements/x2sys/x2sys_get`
    - :doc:`gmt:supplements/x2sys/x2sys_init`
    - :doc:`gmt:supplements/x2sys/x2sys_list`
    - :doc:`gmt:supplements/x2sys/x2sys_merge`
    - :doc:`gmt:supplements/x2sys/x2sys_put`
    - :doc:`gmt:supplements/x2sys/x2sys_report`
    - :doc:`gmt:supplements/x2sys/x2sys_solve`
    - :doc:`gmt:trend1d`
    - :doc:`gmt:trend2d`
    - :doc:`gmt:triangulate`
    - :doc:`gmt:wiggle`

**GMT 模块（按功能分类）[包含了尚未翻译模块]**

.. hlist::
    :columns: 4

    - :ref:`主程序/脚本 <module_program>`
    - :ref:`现代模式会话管理 <module_session_management>`
    - :ref:`绘图相关模块 <module_plotting>`
    - :ref:`1D 数据处理 <module_1D_data_processing>`
    - :ref:`2D 数据处理 <module_2D_data_processing>`
    - :ref:`参数设置 <module_parameter_setting>`
    - :ref:`信息提取 <module_information_retrieval>`
    - :ref:`格式转换 <module_format_conversion>`
    - :ref:`mgd77 相关模块 <module_mgd77>`
    - :ref:`x2sys 相关模块 <module_x2sys>`
    - :ref:`SPOTTER 相关模块 <module_spotter>`
    - :ref:`POTENTIAL 相关模块 <module_potential>`
    - :ref:`其他模块 <module_other>`
    - :ref:`其他脚本 <other_scripts>`

================================================ ========================================================================
模块类别和模块名                                 功能
================================================ ========================================================================
**主程序/脚本**                                  .. _module_program:
:doc:`gmt`                                       GMT 主程序
:doc:`gmt-config`                                返回 GMT 动态函数库的基本信息
**现代模式会话管理**                             .. _module_session_management:
:doc:`begin`                                     初始化一个新的 GMT 现代模式会话
:doc:`clear`                                     删除缓存目录、数据目录、会话目录以及当前配置文件
:doc:`docs`                                      打开指定模块的 HTML 文档
:doc:`end`                                       结束现代模式会话，生成并显示图片
:doc:`figure`                                    设置当前图片的属性
:doc:`inset`                                     管理和设置图中图模式
:doc:`subplot`                                   管理和设置子图模式
**绘图相关模块**                                 .. _module_plotting:
:doc:`basemap`                                   绘制底图
:doc:`coast`                                     在地图上绘制海岸线、河流、国界线
:doc:`plot`                                      在图上绘制线段、多边形和符号
:doc:`text`                                      在图上写文本
:doc:`colorbar`                                  在图上绘制色标
:doc:`legend`                                    绘制图例
:doc:`histogram`                                 统计并绘制直方图
:doc:`rose`                                      绘制极坐标下的直方图（sector图、rose图或windrose图）
:doc:`gmt:events`                                绘制特定时刻的事件符号和标签信息
:doc:`gmt:plot3d`                                在3D图上绘制线段、多边形和符号
:doc:`image`                                     将EPS或光栅图片放在图上
:doc:`solar`                                     计算或/和绘制晨昏线以及民用、航海用以及天文用曙暮光区域
:doc:`clip`                                      打开或关闭多边形裁剪路径
:doc:`sac`                                       在地图上绘制 SAC 格式的地震波形数据
:doc:`meca`                                      在地图上绘制震源机制解
:doc:`polar`                                     在震源球上绘制台站极性
:doc:`velo`                                      在地图上绘制速度矢量、十字线、楔形图
:doc:`coupe`                                     绘制震源机制解的剖面图
:doc:`ternary`                                   绘制三角图解
:doc:`gmt:mask`                                  将没有数据覆盖的区域裁剪或覆盖住
:doc:`contour`                                   使用直接三角化法对数据进行等值线绘制
:doc:`gmt:wiggle`                                沿着测线绘制 z = f(x,y) 数据
:doc:`gmt:supplements/segy/segy`                 在图上绘制SEGY文件
:doc:`gmt:supplements/segy/segyz`                在3D图上绘制SEGYZ文件
:doc:`gmtlogo`                                   在图上绘制GMT图形logo
:doc:`grdvector`                                 根据两个网格文件绘制矢量场
:doc:`grdimage`                                  在图上绘制网格数据
:doc:`grdcontour`                                根据网格文件绘制等值线
:doc:`grdview`                                   利用网格文件绘制3D视角图或表面网格图
:doc:`gmt:movie`                                 制作动画
**1D 数据处理**                                  .. _module_1D_data_processing:
:doc:`makecpt`                                   生成CPT文件
:doc:`gmtselect`                                 根据多个准则筛选数据
:doc:`project`                                   将数据点投影到线或大圆路径上，生成测线，坐标转换
:doc:`gmt:gmtconvert`                            表数据格式转换、列提取、列粘贴
:doc:`gmt:trend1d`                               一维数据的多项式拟合
:doc:`fitcircle`                                 拟合球面上数据点的平均位置及圆弧
:doc:`gmtsimplify`                               使用Douglas-Peucker算法对线段做简化
:doc:`filter1d`                                  对1D表数据做时间域滤波
:doc:`gmtconnect`                                将端点接近的线段连接起来
:doc:`sample1d`                                  对1D表数据进行重采样
:doc:`spectrum1d`                                计算一个时间序列的自功率谱，或两个时间序列的互功率谱
:doc:`gmt:gmtmath`                               对表数据进行数学计算操作
:doc:`mapproject`                                地图变换的正变换和逆变换
:doc:`gmt:gmtspatial`                            线段和多边形的地理空间操作
:doc:`gmt:gmtvector`                             2D和3D下笛卡尔矢量操作
:doc:`gmt:gmtregress`                            1D数据的线性回归
**2D 数据处理**                                  .. _module_2D_data_processing:
:doc:`grdcut`                                    从一个网格文件中裁剪出一个矩形子区域生成新的网格文件
:doc:`grdpaste`                                  将两个网格沿着其共同边界拼接成一个文件
:doc:`grdblend`                                  将多个部分重叠的网格文件合并成一个网格文件
:doc:`gmt:grdtrack`                              获取指定地理位置处的网格值
:doc:`gmt:grdgradient`                           计算网格的方向梯度
:doc:`grdclip`                                   对网格文件的Z值做裁剪
:doc:`grd2xyz`                                   将网格文件转换成表数据
:doc:`grdconvert`                                在不同的网格格式之间互相转换
:doc:`grdedit`                                   修改网格文件的头段或内容
:doc:`grdinfo`                                   从网格文件中提取基本信息
:doc:`grdsample`                                 对网格文件做重采样
:doc:`grdlandmask`                               根据海岸线数据创建陆地-海洋的mask网格文件
:doc:`grdvolume`                                 计算网格数据中某个等值线所包围的表面积和体积
:doc:`grdtrend`                                  拟合网格的趋势面并计算残差
:doc:`grdproject`                                对网格数据做地图变换和逆变换
:doc:`grdmask`                                   根据多边形数据或点数据创建mask网格文件
:doc:`gmt:grdmath`                               对网格文件做数学计算操作
:doc:`gmt:grdfilter`                             对网格文件做空间域或时间域滤波
:doc:`gmt:grdfft`                                对网格文件在波数域或频率域做操作
:doc:`grdfill`                                   对网格文件中的无值区域进行插值
:doc:`gmt:grdhisteq`                             对网格做直方图均衡
:doc:`grd2cpt`                                   根据网格文件的值生成CPT文件
:doc:`gmt:blockmean`                             使用L2范式对 (x,y,z) 数据做区块平均
:doc:`gmt:blockmedian`                           使用L1范式对 (x,y,z) 数据做区块平均
:doc:`gmt:blockmode`                             使用模估计对 (x,y,z) 数据做区块平均
:doc:`surface`                                   使用可调节张量连续曲率样条插值法对数据进行网格化
:doc:`gmt:gmtsplit`                              将表数据拆分为单独的数据段
:doc:`gmt:triangulate`                           对表数据做三角剖分和网格化
:doc:`gmt:nearneighbor`                          使用 "Nearest neighbor" 算法对数据进行网格化
:doc:`gmt:trend2d`                               二维数据的多项式拟合
:doc:`gmt:greenspline`                           使用格林函数样条进行插值
:doc:`sph2grd`                                   根据球谐系数计算网格
:doc:`gmt:sphdistance`                           计算球面上的Voronoi距离、节点或natural nearest-neighbor grid
:doc:`gmt:sphinterpolate`                        球面上张量数据的球面网格化
:doc:`gmt:sphtriangulate`                        球面数据的Delaunay 或 Voronoi 构建
:doc:`gmt:dimfilter`                             在空间域对网格数做方向性滤波
**参数设置**                                     .. _module_parameter_setting:
:doc:`gmtdefaults`                               列出所有GMT参数的当前值
:doc:`gmtset`                                    修改单个或多个GMT参数的值
:doc:`gmtget`                                    列出单个或多个GMT参数的当前值
**信息提取**                                     .. _module_information_retrieval:
:doc:`grdinfo`                                   从网格文件中提取基本信息
:doc:`gmtinfo`                                   从表数据中提取信息
:doc:`gmtwhich`                                  返回指定文件的完整路径
**格式转换**                                     .. _module_format_conversion:
:doc:`xyz2grd`                                   将XYZ数据或Z数据转换成网格文件
:doc:`grd2xyz`                                   将网格文件转换成表数据
:doc:`kml2gmt`                                   将Google Earth的KML文件转换为GMT表数据
:doc:`gmt:gmt2kml`                               将GMT表数据转换为Google Earth的KML文件
:doc:`grdconvert`                                在不同的网格格式之间互相转换
:doc:`psconvert`                                 将GMT生成的PS文件转换为其他图片格式
**mgd77 相关模块**                               .. _module_mgd77:
:doc:`gmt:supplements/mgd77/mgd77convert`        Convert MGD77 data to other file formats
:doc:`gmt:supplements/mgd77/mgd77header`         Create MGD77 headers from A77 files
:doc:`gmt:supplements/mgd77/mgd77info`           Extract information about MGD77 files
:doc:`gmt:supplements/mgd77/mgd77list`           Extract data from MGD77 files
:doc:`gmt:supplements/mgd77/mgd77magref`         Evaluate the IGRF or CM4 magnetic field models
:doc:`gmt:supplements/mgd77/mgd77manage`         Manage the content of MGD77+ files
:doc:`gmt:supplements/mgd77/mgd77path`           Return paths to MGD77 cruises and directories
:doc:`gmt:supplements/mgd77/mgd77sniffer`        Along-track quality control of MGD77 cruises
:doc:`gmt:supplements/mgd77/mgd77track`          Plot track-line map of MGD77 cruises
**x2sys 相关模块**                               .. _module_x2sys:
:doc:`gmt:supplements/x2sys/x2sys_binlist`       Create bin index listing from track data files
:doc:`gmt:supplements/x2sys/x2sys_cross`         Calculate crossovers between track data files
:doc:`gmt:supplements/x2sys/x2sys_datalist`      Extract content of track data files
:doc:`gmt:supplements/x2sys/x2sys_get`           Get track listing from track index database
:doc:`gmt:supplements/x2sys/x2sys_init`          Initialize a new x2sys track database
:doc:`gmt:supplements/x2sys/x2sys_list`          Extract subset from crossover data base
:doc:`gmt:supplements/x2sys/x2sys_merge`         Merge an updated COEs table (smaller) into the main table (bigger)
:doc:`gmt:supplements/x2sys/x2sys_put`           Update track index database from track bin file
:doc:`gmt:supplements/x2sys/x2sys_report`        Report statistics from crossover data base
:doc:`gmt:supplements/x2sys/x2sys_solve`         Determine least-squares systematic correction from crossovers
**SPOTTER 相关模块**                             .. _module_spotter:
:doc:`gmt:supplements/spotter/backtracker`       Generate forward and backward flowlines and hotspot tracks
:doc:`gmt:supplements/spotter/gmtpmodeler`       Evaluate a plate motion model at given locations
:doc:`gmt:supplements/spotter/grdpmodeler`       Evaluate a plate motion model on a geographic grid
:doc:`gmt:supplements/spotter/grdrotater`        Finite rotation reconstruction of geographic grid
:doc:`gmt:supplements/spotter/originater`        Associate seamounts with nearest hotspot point sources
:doc:`gmt:supplements/spotter/rotconverter`      Manipulate total reconstruction and stage rotations
:doc:`gmt:supplements/spotter/rotsmoother`       Get mean rotations and covarience from set of finate rotations
:doc:`gmt:supplements/spotter/grdspotter`        Create CVA image from a gravity or topography grid
:doc:`gmt:supplements/spotter/hotspotter`        Create CVA image from seamount locations
**POTENTIAL 相关模块**                           .. _module_potential:
:doc:`gmt:supplements/potential/gmtflexure`      Compute flexural deformation of 2-D loads, forces and bending moments
:doc:`gmt:supplements/potential/grdflexure`      Compute flexural deformation of 3-D surfaces for various rheologies
:doc:`gmt:supplements/potential/gmtgravmag3d`    Compute the gravity/magnetic anomaly of a 3-D body
:doc:`gmt:supplements/potential/grdgravmag3d`    Computes the gravity effect of one (or two) grids
:doc:`gmt:supplements/potential/gravfft`         Compute gravitational attraction of 3-D surfaces and a little more
:doc:`gmt:supplements/potential/grdredpol`       Compute the Continuous Reduction To the Pole, AKA differential RTP
:doc:`gmt:supplements/potential/grdseamount`     Compute synthetic seamount bathymetry
:doc:`gmt:supplements/potential/talwani2d`       Compute geopotential anomalies over 2-D bodies
:doc:`gmt:supplements/potential/talwani3d`       Compute geopotential anomalies over 3-D bodies
**其他模块**                                     .. _module_other:
:doc:`gmt:supplements/segy/segy2grd`             Converting SEGY data to a GMT grid
:doc:`gmt:supplements/gshhg/gshhg`               Extract data tables from binary GSHHS or WDBII data files
:doc:`img2google`                                由测深墨卡托 img 网格创建谷歌地球 KML 文件
:doc:`img2grd`                                   从墨卡托 img 格式文件中提取网格数据
:doc:`gmt:supplements/geodesy/gpsgridder`        Interpolate GPS velocity vectors using Green's functions
**其他脚本**                                     .. _other_scripts:
:doc:`gmt:gmtswitch`                             GMT多版本之间切换
================================================ ========================================================================

.. raw:: latex

   % numbering and show section, i.e. module names, not subsections
   % protect it to make it also work with toc
   % see https://tex.stackexchange.com/questions/4102/
   \addtocontents{toc}{\protect\setcounter{tocdepth}{1}}
   \setcounter{tocdepth}{1}
   \setcounter{secnumdepth}{1}

.. toctree::
   :maxdepth: 1
   :hidden:

   basemap
   begin
   clear
   clip
   coast
   colorbar
   contour
   coupe
   docs
   end
   figure
   filter1d
   fitcircle
   gmt
   gmt-config
   gmtconnect
   gmtdefaults
   gmtget
   gmtinfo
   gmtlogo
   gmtselect
   gmtset
   gmtsimplify
   gmtwhich
   grd2cpt
   grd2xyz
   grdblend
   grdclip
   grdcontour
   grdconvert
   grdcut
   grdedit
   grdfill
   grdimage
   grdinfo
   grdlandmask
   grdmask
   grdpaste
   grdproject
   grdsample
   grdtrack
   grdtrend
   grdvector
   grdview
   grdvolume
   histogram
   image
   img2google
   img2grd
   inset
   kml2gmt
   legend
   makecpt
   mapproject
   meca
   plot
   polar
   project
   psconvert
   rose
   sac
   sample1d
   solar
   spectrum1d
   sph2grd
   subplot
   surface
   ternary
   text
   velo
   xyz2grd

.. raw:: latex

   % revert back to subsections
   \addtocontents{toc}{\protect\setcounter{tocdepth}{2}}
   \setcounter{tocdepth}{2}
   \setcounter{secnumdepth}{2}
